--- a/.gitignore
+++ b/.gitignore
@@ -58,4 +58,4 @@ Archives_Robot_V2
 Logiciels
 Rapports_2021
 GestionDeProjet/~$bot holonome - specs_techniques_v1_2021.docx
-Hardware\Carte interface\carte_interface
+Hardware/Carte interface/carte_interface
