--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,4 @@ Logiciels
 Rapports_2021
 GestionDeProjet/~$bot holonome - specs_techniques_v1_2021.docx
 Hardware/Carte interface/carte_interface
+Personal
