--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,7 @@ Rapports_2021
 GestionDeProjet/~$bot holonome - specs_techniques_v1_2021.docx
 #Hardware/Carte interface/carte_interface
 Personal
+GestionDeProjet/Reunions/Reunion_06_07_2022/CompteRendu_06_07_22.docx
+GestionDeProjet/Reunions/Reunion_06_07_2022/Reunion_avancement_06_07_22.pptx
+GestionDeProjet/Commandes/Commande_n_3.xlsx
+GestionDeProjet/Commandes/Commandes.xlsx
